--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@ layout: home
 
 				<figure class="gallery-item">
 					<header class='gallery-icon'>
-						<a href="#"><img src="{{ site.baseurl }}/img/slider/home01.jpg"  alt="" /></a>
+						<a href="#"><img src="https://c1.staticflickr.com/8/7603/26605271784_6acbf6dc3f_k.jpg"  alt="" /></a>
 					</header>	
 				</figure>
 
 				<figure class="gallery-item">
 					<header class='gallery-icon'>
-						<a href="#"><img src="{{ site.baseurl }}/img/slider/home02.jpg"  alt="" /></a>
+						<a href="#"><img src="https://c5.staticflickr.com/8/7362/26606050324_6a09dcf798_k.jpg"  alt="" /></a>
 					</header>
 				</figure>				
 
 				<figure class="gallery-item">
 					<header class='gallery-icon'>
-						<a href="#"><img src="{{ site.baseurl }}/img/slider/home03.jpg"  alt="" /></a>
+						<a href="#"><img src="https://c8.staticflickr.com/8/7230/26607992103_86bcc97edf_k.jpg"  alt="" /></a>
 					</header>	
 				</figure>
 
